Update dark mode, Fix search query

--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -22,27 +22,10 @@
   top: 0vh;
 }
 
-.custom-navbar {
-  height: 8vh;
-}
-
-.navbar-collapse {
-  display: flex;
-  justify-content: right;
-}
-
 .form-control {
   width: 200px;
   margin-right: 1em;
   transition: background-color 1s ease, color 1s ease;
-}
-
-.withAWSCloudSchool {
-  transform: 0.5s;
-}
-
-.withAWSCloudSchool:hover {
-  color: rgba(99, 99, 99, 0.9);
 }
 
 .light-dark-icon {
@@ -51,12 +34,12 @@
   transition: background 1s ease, color 1s ease;
 }
 
-.light-dark-icon.dark-mode {
+/* .light-dark-icon.dark-mode {
   font-size: 1.5em;
   cursor: pointer;
   color: #F1EAFF;
   transition: background 1s ease, color 1s ease;
-}
+} */
 
 body {
   transition: background 1s ease, color 1s ease;
@@ -75,7 +58,7 @@ body.dark-mode {
   transition: background 1s ease, color 1s ease;
 }
 
-.Header.dark-mode .navbar-brand {
+/* .Header.dark-mode .navbar-brand {
   color: #F1EAFF;
   transition: background 1s ease, color 1s ease;
 }
@@ -94,7 +77,7 @@ body.dark-mode {
 .Header.dark-mode .light-dark-icon {
   color: #F1EAFF;
   transition: background 1s ease, color 1s ease;
-}
+} */
 
 @media (max-width: 767px) {
   .form-control {
@@ -106,7 +89,6 @@ body.dark-mode {
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: white;
   position: absolute;
   top: 44px;
   left: 0%;
@@ -114,16 +96,15 @@ body.dark-mode {
   z-index: 500;
   max-height: 30vh;
   overflow-y: auto;
+  font-weight: 500;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.suggestions-list li {
-  cursor: pointer;
-  text-align: left;
-  padding-left: 1em;
-  padding-right: 1em;
+.dark .light-dark-mode{
+  color: #F1EAFF !important;
+  transition: color 1s ease;
 }
 
-.suggestions-list li:hover {
-  background-color: #eee;
+.dark .light-dark-mode:hover{
+  color: #CCCCCC !important;
 }
